# VRFloorTrackingResearch

./: README.md  playercontrollerWorksbutwithLag.cs
FloorServer/: CMakeLists.txt  main.cpp
RockVR/: Assembly-CSharp-Editor-vs.csproj  Assembly-CSharp-Editor.csproj  Assembly-CSharp-vs.csproj  Assembly-CSharp.csproj  RockVR-csharp.sln  RockVR.sln  RockVR.userprefs
RockVR/Assets/Cardboard/DemoScene/: DemoScene.unity  playercontroller.cs
RockVR/Assets/Cardboard/Scripts/: GazeInputModule.cs
RockVR/Assets/rockmanVR/: panelBlue.mtl  panelRED.mtl  panels.blend  panels.blend1  rockman.blend
RockVR/Assets/rockmanVR/Materials/: GLASS.mat  Material.mat  Material_001.mat  Material_002.mat  black.mat  donkerblauw.mat  eye.mat  iris.mat  meta.mat  metal.mat  panel_center.mat  panel_sides.mat  purple.mat  rood.mat  side-blue.mat  skin.mat  yellow.mat
RockVR/ProjectSettings/: ProjectSettings.asset  TagManager.asset
RockVR/temp_build/rockVR_Data/: PlayerConnectionConfigFile  mainData  resources.assets  sharedassets0.assets
RockVR/temp_build/rockVR_Data/Managed/: Assembly-CSharp.dll.mdb  Mono.Security.dll.mdb  System.Core.dll.mdb  System.dll.mdb  UnityEngine.Analytics.dll.mdb  UnityEngine.Networking.dll.mdb  UnityEngine.UI.dll.mdb  UnityEngine.dll.mdb  mscorlib.dll.mdb
incrementalTests/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  incrementalTests.sln  incrementalTests.userprefs
incrementalTests/Assets/: Tree.prefab  arc.blend  color1.mat  color2.mat  playercontroller.cs
incrementalTests/Assets/Materials/: Material.mat
(+1 files in other folders)
